name: flags
version: 0.0.0
license-file: LICENSE
build-type: Simple
cabal-version: >= 1.10

flag new-time
  manual: False
  default: True
  description: Use time >= 1.5

library
  hs-source-dirs:
      src
  build-depends:
      base
  if flag(new-time)
    build-depends:
        time >=1.5 && <1.7
  if !flag(new-time)
    build-depends:
        time >=1.4 && <1.5
      , old-locale
  exposed-modules:
      Hpack
      Hpack.Config
      Hpack.GenericsUtil
      Hpack.Haskell
      Hpack.Render
      Hpack.Run
      Hpack.Util
      Hpack.Yaml
  default-language: Haskell2010
